# langraph_demo

./: .gitignore  API_CONFIG_GUIDE.md  ARCHITECTURE.md  ARCHITECTURE_FIX.md  DEPLOYMENT.md  INSTALL.md  LEARNING_GUIDE.md  PROJECT_SHOWCASE.md  PROJECT_SUMMARY.md  README.md  config.env  download_model.py  pyproject.toml  quickstart.py  requirements.txt  setup.py  setup_api_key.ps1  setup_env.ps1  setup_env.sh  simple_demo.py
api/: __init__.py  main.py
config/: __init__.py  settings.py
examples/: __init__.py  advanced_demo.py  init_knowledge_base.py  simple_chat.py
langraph_customer_service/: __init__.py  llm_client.py  state.py  utils.py
langraph_customer_service/agents/: __init__.py  customer_service.py
langraph_customer_service/knowledge_base/: __init__.py  vector_store.py
langraph_customer_service/tools/: __init__.py  business_tools.py
src/: __init__.py  llm_client.py  state.py  utils.py
src/agents/: __init__.py  customer_service.py
src/knowledge_base/: __init__.py  vector_store.py
src/tools/: __init__.py  business_tools.py
